(coq.theory
 (name mathcomp.finmap)
 (package coq-mathcomp-finmap)
 (synopsis "Finite sets, finite maps, finitely supported functions")
 (flags
  -w -projection-no-head-constant
  -w -redundant-canonical-projection
  -w -notation-overridden
  -w +duplicate-clear
  -w +non-primitive-record
  -w +undeclared-scope
  -w -ambiguous-paths
  -w -uniform-inheritance)
 (theories mathcomp.ssreflect))
